# synrail

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  __init__.py  alpha.py  constraints-dev.txt  pyproject.toml  reference_runner.py  setup.py  synrail.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: alpha_feedback.yml  bug_report.md  confusing_output.yml  false_green_case.yml  (+1 more)
docs/: README.md
examples/: README.md  false_green_demo.md  sanitized_application_policy_examples.md  sanitized_end_to_end_kernel_loop.md  sanitized_narrow_incident_flow.md
fixtures/: comparison_input_compound_baseline_v1.json  comparison_input_compound_synrail_v1.json  comparison_input_hybrid_baseline_v0.json  comparison_input_hybrid_baseline_v1.json  comparison_input_hybrid_pressure_baseline_003_v1.json  comparison_input_hybrid_pressure_baseline_v1.json  comparison_input_hybrid_pressure_synrail_003_v1.json  comparison_input_hybrid_pressure_synrail_v1.json  comparison_input_hybrid_synrail_v0.json  comparison_input_hybrid_synrail_v1.json  comparison_input_strong_baseline_v0.json  comparison_input_strong_baseline_v1.json  comparison_input_strong_synrail_v0.json  comparison_input_strong_synrail_v1.json  comparison_input_weak_baseline_v0.json  comparison_input_weak_baseline_v1.json  comparison_input_weak_synrail_v0.json  comparison_input_weak_synrail_v1.json  continuation_adoption_delta_001.json  continuation_adoption_run_001.json  continuation_adoption_run_002.json  cost_of_control_001.json  cost_of_control_002.json  cost_of_control_003.json  cost_of_control_everyday_001.json  cost_of_control_small_template_text_fix_001.json  cost_of_control_small_template_text_fix_behavior_pressure_001.json  governed_path_cost_delta_001.json  governed_path_cost_input_prepared_001.json  governed_path_cost_input_unprepared_001.json  hybrid_status_001.json  hybrid_status_002.json  hybrid_status_003.json  mode_recommendation_hybrid_001.json  mode_recommendation_strong_001.json  repeatable_everyday_benchmark_pack_001.json  small_template_text_fix_behavior_pressure_pack_001.json  small_template_text_fix_benchmark_pack_001.json
schemas/: __init__.py  acceptance_criteria_record_v0.schema.json  acceptance_criteria_validation_record_v0.schema.json  alpha_session_replay_record_v0.schema.json  artifact_consistency_record_v0.schema.json  artifact_repair_receipt_v0.schema.json  baseline_comparison_record_v0.schema.json  baseline_comparison_record_v1.schema.json  bootstrap_record_v0.schema.json  bootstrap_validation_record_v0.schema.json  bug_packet_record_v0.schema.json  canonical_run_artifact_v0.schema.json  checkpoint_operator_reading_record_v0.schema.json  checkpoint_record_v0.schema.json  closure_verdict_v0.schema.json  comparison_input_v0.schema.json  comparison_input_v1.schema.json  comparison_input_v2.schema.json  consistency_recovery_prompt_reading_record_v0.schema.json  consistency_recovery_prompt_record_v0.schema.json  consistency_recovery_record_v0.schema.json  continuation_adoption_delta_v0.schema.json  continuation_adoption_record_v0.schema.json  continuation_arbiter_record_v0.schema.json  cost_of_control_record_v0.schema.json  doctor_coverage_record_v0.schema.json  doctor_record_v0.schema.json  externality_pressure_record_v0.schema.json  governed_path_cost_delta_v0.schema.json  governed_path_cost_input_v0.schema.json  governed_path_preparation_receipt_v0.schema.json  hybrid_status_v0.schema.json  internal_cross_repo_pilot_v0.schema.json  mode_recommendation_v0.schema.json  mode_selection_receipt_v0.schema.json  observability_record_v0.schema.json  operator_brief_chain_record_v0.schema.json  operator_brief_record_v0.schema.json  operator_reading_record_v0.schema.json  operator_render_adoption_delta_v0.schema.json  (+21 more)
tests/: test_agent_adoption.py  test_alpha_evidence_ownership.py  test_alpha_test_pack_smoke.py  test_baseline_harness_v1.py  test_behavioral_claim_gap.py  test_bootstrap_starter_text.py  test_claim_validation_pack.py  test_closure_runtime_wiring.py  test_controlled_start_smoke.py  test_cost_of_control_v0.py  test_cross_repo_pilot.py  test_deploy_gate.py  test_everyday_benchmark_pack.py  test_gate_units.py  test_install_smoke.py  test_prompt_chain.py  test_safe_git.py  test_small_template_text_fix_benchmark_pack.py  test_synrail_io.py  test_thin_record.py  test_truth_regressions.py  test_unseen_validation_pack.py  test_untested_modules.py  test_verification_init.py  test_verification_preflight.py  test_verification_suggestions.py
tools/: __init__.py
(+1885 files in other folders)
