[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synrail"
version = "0.1.0"
description = "Guided control for reliable agent execution."
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
synrail = "alpha:main"

[tool.setuptools]
py-modules = ["alpha", "reference_runner"]

[tool.setuptools.packages.find]
where = ["."]
include = ["synrail*"]

[tool.setuptools.package-data]
synrail = ["schemas/*.json", "tools/reference/*.sh"]
