[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synrail"
version = "0.1.0"
description = "Guided control for reliable agent execution."
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
synrail = "alpha:main"

[tool.setuptools]
py-modules = ["alpha", "reference_runner"]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*", "schemas"]

[tool.setuptools.package-data]
tools = ["reference/*.json", "reference/*.sh"]
schemas = ["*.json"]
